src/objects/Autonaming_Rule__mdt.object
<CustomObject>
    <description>Autonaming Rules drive the Declarative Autonaming package, by declaring a rule for how to populate the default Name field.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Autonaming will only run on active naming rules</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NameSpec_Processor__c</fullName>
        <defaultValue>&quot;DAN_Namespec&quot;</defaultValue>
        <inlineHelpText>Name of the Apex Class that will provide NameSpec parsing and resolution.</inlineHelpText>
        <label>NameSpec Processor</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Spec__c</fullName>
        <description>Name spec currently supports {!FieldName__c} syntax and that is it.</description>
        <inlineHelpText>The namespec formatted name template. See the docs for help with namespecs.</inlineHelpText>
        <label>Name Spec</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Naming_Result_Field__c</fullName>
        <defaultValue>&quot;Name&quot;</defaultValue>
        <inlineHelpText>The API name of the field to populate with the autoname.</inlineHelpText>
        <label>Naming Result Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <inlineHelpText>The name of the object that this naming rule runs on</inlineHelpText>
        <label>Object</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Autonaming Rule</label>
    <pluralLabel>Autonaming Rules</pluralLabel>
</CustomObject>